tests/compile_failures/events/optional_list_not_supported.rs
use dioxus_sugar::events;

#[events(optional(onclick, onkeypress))]
struct Props {}

fn main() {}