tests/compile_failures/events/optional_list_not_supported.stderr
error: not a valid event list
 --> tests/compile_failures/events/optional_list_not_supported.rs:3:10
  |
3 | #[events(optional(onclick, onkeypress))]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
